[package]
name = "tableturf-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.9"
warp = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
rand = "0.8.5"
thiserror = "1.0.37"
hashbrown = "0.13.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.0", features = ["json"] }
tracing-appender = "0.2.2"
common = { version = "0.1.0", path = "../common" }

