[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"
wasm-bindgen = "0.2.67"
wasm-bindgen-futures = "0.4.28"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwasm = "0.4"
futures = "0.3"
common = { version = "0.1.0", path = "../common" }

